--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     background-color: rgb(33, 34, 34);
 }
 .lightgray {
-    background-color: dimgrey;
+    background-color: rgb(175, 172, 172);
 }
 .center {
     justify-content: center;
@@ -18,4 +18,11 @@
     height:60px;
     border: 6px;
     border-color: blue;
+}
+.square {
+    width: 70px;
+    height: 70px;
+}
+.rounded {
+    border-radius: 4px;
 }
