--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,14 @@
 button:hover {
     background-color: blueviolet;
 }
+.bluebox {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 90px;
+    padding-right: 90px;
+    border-radius: 4px;
+}
+
+html {
+    font-style: hero;
+}
